src/pages/GamePage/GamePage.css
body {
  background-color: #b4d6cc;
}

.game-page {
  margin: 2%;
}

.top-section {
  display: flex;
  justify-content: space-between;
}

.top-item {
  font-weight: 700;
  font-size: 20px;
}

.item-color {
  color: #1d4e89;
}

.score {
  display: flex;
}

.score-color {
  color: #fb6105;
}

.bottom-cards {
  border: 1px solid;
  padding: 8px 10px;
}

.board-container {
  background-color: #7dcfb6;
  margin-top: 1%;
  padding: 1%;
}

.card-container {
  border: 1px solid black;
  width: 100px;
  height: 170px;
  /* padding-left: 4%;
  padding-bottom: 1%; */
  background-color: #e6d5b9;
  border-style: solid none none solid;
  border-color: gray;
  box-shadow: -1px -1px 3px lightgray;
  border-radius: 4px;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  cursor: grab;
}

.card-container:hover {
  /* background-color: #e8dbc8; */
}

.current-card:hover {
  background-color: #e8dbc8;
}

.card-heading {
  font-weight: 400;
  font-size: 16px;
  text-align: center;
  margin: 0;
}

.card-text {
  font-weight: 400;
  font-size: 14px;
  margin: 0;
  display: flex;
  align-items: center;
}

.card-text span {
  margin-left: 10px;
  font-weight: 200;
  font-size: 35px;
}

.card-container img {
  max-height: 50px;
  max-width: 100%;
}

/* Dropzone */
.dropzone {
  width: 20px;
  color: transparent;
  background-color: rgba(0, 0, 0, 0.1);
  transform: scaleX(5);
  opacity: 0;
}

.dropzone.selected {
  width: 100px;
  margin-left: 20px;
  margin-right: 20px;
  padding: 8px 10px;
  border-radius: 4px;
  transform: scaleX(1);
  opacity: 0.5;
}

/* MODAL */
.restartBtn {
  margin: 20px 10px;
  cursor: pointer;
  font-weight: 500;
  padding: 13px 25px;
  border-radius: 15px;
  font-size: 0.8rem;
  border: none;
  color: white;
  background: #f79256;
  transition: all 0.25s ease;
}

.primaryBtn:hover {
  transform: translateY(-5px);
  box-shadow: 0 10px 20px -10px rgba(24, 90, 219, 0.6);
}

.bottom-container {
  margin-top: 5%;
  display: flex;
  justify-content: center;
  gap: 130px;
  width: 100%;
}

.description-container {
  display: grid;
  grid-template-columns: 1fr;
}

.description-box {
  background-color: white;
  height: 100px;
  width: 170px;
  padding: 8px 20px;
  border-radius: 4px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  grid-row-start: 1;
  grid-column-start: 1;
}

.description {
  font-weight: 400;
  font-size: 16px;
  hyphens: auto;
}

.dragged:hover {
  cursor: grabbing;
}

.card_and_description_container {
  width: 100%;
}


@media (min-width: 280px) and (max-width: 653px) {

  .card_and_description_container {
    width: 100%;
  }
 
 
}

@media only screen and (max-width: 768px) {
  .top-item {
    font-size: 12px;
  }
  .top-section {
    margin-top: 25px;
  }
  .card-container {
    border: 1px solid black;
    width: 50px;
    height: 100px;
    border-style: solid none none solid;
    border-color: gray;
    box-shadow: -1px -1px 3px lightgray;
    overflow: hidden;
  }
  .card-container img {
    width: 65%;
    margin-top: 7%;
  }

  .card_and_description_container {
    display: flex;
    justify-content: flex-start;
    margin-top: 30px;
  }
  .card-heading {
    margin-top: 1.5rem;
    margin-left: 10%;
  }
  .card-heading,
  .card-text {
    font-size: 12px;
  }
  .card-text span {
    font-size: 25px;
  }
  .bottom-container {
    display: flex;
    margin-left: 40%;
    width: 10%;
  }
  .description-box {
    width: 70px;
    height: 80px;
    padding: 10px;
    margin-top: 32px;
  }
  .description {
    font-size: 10px;
  }
}

@media only screen and (max-width: 1024px) {
  .top-item {
    font-size: 10px;
  }
  .top-section {
    margin-top: 40px;
  }
  .card-container {
   width: 40px;
   height: 65px;
  }
  .card-container img {
    width:40%;
  }

  .card_and_description_container {
    margin-top: 3rem;
  }
  /* .card-heading {
    margin-top: 0.5rem;
    margin-left: 10%;
  } */
  .card-heading,
  .card-text {
    font-size: 8px;
  }
  .card-text span {
    font-size: 15px;
  }
  /* .bottom-container {
    display: flex;
    margin-left: 20%;
    width: 60%;
  } */
  .description-box {
    width: 70px;
    height: 80px;
    padding: 0;
  }
  .description {
    font-size: 8px;
  }
}

